objects/Financial_Account__c.object
<CustomObject>
    <fields>
        <fullName>Term_Months_Remaining__c</fullName>
        <description>Remaining term</description>
        <label>Term Months Remaining</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Due__c</fullName>
        <formula>Payment_Amount_Past_Due__c + Charges_Late__c + Charges_Miscellaneous__c +

IF(
  AND(
    RecordType.Name = &quot;Retail&quot;,
    Payment_Date_Past_Due__c &lt; TODAY(),
    TODAY() &lt; Maturity_Date__c,
    VALUE(History_Counter_Days_Past_Due__c) &gt;= 1
  ),

  Payment_Amount_Scheduled__c,

  IF(RecordType.Name = &quot;Lease&quot; &amp;&amp; Payment_Date_Past_Due__c &lt; TODAY(), Payment_Amount_Scheduled__c, 0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Plus_Next__c</fullName>
        <description>Expired terms</description>
        <label>Total Plus Next</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Code_Description__c</fullName>
        <label>Type Code Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Code__c</fullName>
        <label>Type Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unpaid_Late_Charge__c</fullName>
        <description>Unpaid late charge</description>
        <label>Unpaid Late Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unpaid_Miscellaneous_Charge__c</fullName>
        <description>Unpaid miscellaneous charge</description>
        <label>Unpaid Miscellaneous Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User_Remarks__c</fullName>
        <description>User remarks</description>
        <label>User Remarks</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Charge_Per_Mile__c</fullName>
        <description>Charge per mileage</description>
        <label>Vehicle Charge Per Mile</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vehicle_Flag_Low_Mileage__c</fullName>
        <description>Low mileage flag</description>
        <label>Vehicle Flag Low Mileage</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Insurance_Company__c</fullName>
        <description>Insurance company</description>
        <label>Vehicle Insurance Company</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Insurance_Policy__c</fullName>
        <description>Insurance policy</description>
        <label>Vehicle Insurance Policy</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Mileage_Allowance__c</fullName>
        <description>Allowed mileage</description>
        <label>Vehicle Mileage Allowance</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Mileage_Start__c</fullName>
        <description>Start mileage</description>
        <label>Vehicle Mileage Start</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Sale_Type__c</fullName>
        <description>Vehicle Sale Type</description>
        <label>Vehicle Sale Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WUSP_Account_Number__c</fullName>
        <description>***Populated by a workflow rule***

Contains the WUSP formatted account number.</description>
        <label>WUSP Account Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cbCollectionsFA__c</fullName>
        <description>Sets the value to true if the account has past due + charges &gt; 0, days past due in the range of 13 to 90, and in collections list status A, C or P. Otherwise the value is false&gt;</description>
        <formula>IF(AND( Past_Due_Charges__c &gt;0,
AND(VALUE(History_Counter_Days_Past_Due__c) &gt;=13,
VALUE(History_Counter_Days_Past_Due__c) &lt;= 90)
,OR(Collection_List_Status_1__c =&quot;A&quot;
,Collection_List_Status_1__c =&quot;C&quot;
,Collection_List_Status_1__c =&quot;P&quot;)
)
,TRUE,FALSE)</formula>
        <inlineHelpText>Sets the value to true if the account has past due + charges &gt; 0, days past due in the range of 13 to 90, and in collections list status A, C or P. Otherwise the value is false&gt;</inlineHelpText>
        <label>cbCollectionsFA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iVault_Account_Number__c</fullName>
        <description>***Populated by a workflow rule*** 

Contains the iVault formatted account number.</description>
        <label>iVault Account Number</label>
        <type>TextArea</type>
    </fields>
    <label>Financial Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Collateral__c</columns>
        <columns>Loan_Original_Term__c</columns>
        <columns>Contract_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Recently_Loaded</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Collateral__c</columns>
        <columns>Loan_Original_Term__c</columns>
        <columns>Contract_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>Recently Loaded</label>
    </listViews>
    <nameField>
        <label>Financial Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Accounts</pluralLabel>
    <recordTypes>
        <fullName>Lease</fullName>
        <active>true</active>
        <description>Lease type of account</description>
        <label>Lease</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retail</fullName>
        <active>true</active>
        <description>Loan type of account</description>
        <label>Retail</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Prevent_Financial_Account_Name_Change</fullName>
        <active>true</active>
        <description>Financial account name cannot be locked down via page layout or FLS, so validation rule is needed to prevent end users from changing the field value. Only integration or a system administrator may change the name.</description>
        <errorConditionFormula>AND(
  ISCHANGED(Name),
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;)
)</errorConditionFormula>
        <errorMessage>The record name (Financial Account Name) cannot be changed. Cancel your changes and re-edit without modifying the value of the Financial Account Name field.</errorMessage>
    </validationRules>
</CustomObject>